2003-03-27  Ross Burton  <ross@burtonini.com>

	* gconf/gconftool.c:
	Added --get-type, --get-list-size and --get-list-element. Patch
	from TODO, closing #91349.
	(do_dump_values): Return an int as the prototype says we do.

	Applied patch from Jeff Franks <jcf@tpg.com.au> with a extensions,
	closing #97205.
	* gconf/gconf-schema.h:
	* gconf/gconf-value.h: Wrapped both header files in an extern "C"
	for C+compilation.
	
	* gconf/gconf-internals.h:
	* gconf/gconf-value.h: Exported gconf_entry_copy(), _ref and
	_unref. Moved declaration from gconf-internals.h to
	gconf-value.h. Also deprecated gconf_entry_free().

	* doc/gconf/tmpl/gconf-value.sgml: Fixed typo, GCONF_VALUE_DOUBLE,
	in the description for gconf_value_get_float(). Changed the value
	type to GCONF_VALUE_FLOAT.
	
	* gconf/gconf-client.h: Added missing GCONF_CLIENT_GET_CLASS
	macro.

2003-03-26  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-internals.c (gconf_get_daemon_dir): we need
	giop_tmpdir_init(), linc_get_tmpdir() isn't helpful. Revert to 
	/tmp/gconfd-foo for now.

2003-03-26  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-internals.c (gconf_get_daemon_dir): call
	linc_set_tmpdir() to maybe make it work

2003-03-26  Havoc Pennington  <hp@redhat.com>

	* configure.in: bump to 2.3.1

	Apply "local locks" patch with linc_get_tmpdir modification from
	Michael, and the default changed to local locks. Now to 
	get global locks you must set GCONF_GLOBAL_LOCKS=1.

	* gconf/gconf-internals.c (gconf_log): convert to locale encoding
	to pass stuff to syslog

2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-14  Mark McLoughlin  <mark@skynet.ie>

	Basically the same patch as the previous one .. but
	for the markup backend.

	* backends/markup-backend.c:
	(resolve_address): update.
	(clear_cache): use markup_tree_rebuild() instead of
	re-creating the tree.
	(ms_new): remove the read_only arg and s/markup_tree_new/
	markup_tree_get/