@@ -1,3 +1,10 @@
+2003-03-27  Brian Cameron <brian.cameron@sun.com>
+
+	* gconf/gconf-sanity-check.c
+	Updated text of the lock question to more clear text that was
+	approved by the docs team.  Havoc reviewed/approved this
+	change.
+
 2003-03-27  Ross Burton  <ross@burtonini.com>
 
 	* gconf/gconftool.c:
